# discord-maid-bot

./: .env.example  .gitignore  CMakeLists.txt  README.md
scripts/: detect_guild.py  setup.py
src/: main.cpp
src/bot/: commands.cpp  commands.hpp  hima_voice_manager.cpp  hima_voice_manager.hpp  reminder_worker.cpp  reminder_worker.hpp  room_manager.cpp  room_manager.hpp
src/config/: env_loader.cpp  env_loader.hpp
src/domain/: reminder.hpp  todo.hpp
src/storage/: storage.cpp  storage.hpp
